fix: spacing for popup card

--- a/src/css/components/_hero-card.scss
+++ b/src/css/components/_hero-card.scss
@@ -22,7 +22,7 @@
         margin-bottom: 3px;
       }
       &> .text{
-        margin-left: 0.2rem;
+        margin-left: 0.8rem;
       }
     }
 
