--- a/src/css/components/_test-map.scss
+++ b/src/css/components/_test-map.scss
@@ -16,8 +16,8 @@
 
 .hero-info {
   position: absolute; /* Изменяем position на absolute */
-  top: 4%; /* Расстояние от верхнего края */
-  left: 2%; /* Расстояние от левого края */
+  top: 2.5rem; /* Расстояние от верхнего края */
+  left: 2.5rem; /* Расстояние от левого края */
   padding: 0;
   z-index: 1000;
   max-width: 550px;
